Prevent splash screen from getting too wide

--- a/frontend/css/splash.css
+++ b/frontend/css/splash.css
@@ -1,8 +1,9 @@
 div.splash {
-	margin:0 auto;
+	margin: 0 auto;
 	width: 80%;
 	margin-left: auto;
     margin-right: auto;
+    max-width: 500px;
 }
 
 body.splash {
